# BlastRadius

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BlastRadius_A100_Training.ipynb  BlastRadius_A100_Training_v2.ipynb  CHANGELOG.md  Dockerfile  Dockerfile.agent  README.md  app_ui.py  blog.md  docker-compose.yml  inference.py  job_cmd.sh  launch_job.py  openenv.yaml  push_blog_to_hf.py  pyproject.toml  requirements.txt  test.ipynb  train.py  war_room_ui.py
.agent/scripts/: auto_preview.py  session_manager.py
.agent/skills/frontend-design/scripts/: ux_audit.py
.agent/skills/lint-and-validate/scripts/: lint_runner.py  type_coverage.py
.agent/skills/mobile-design/scripts/: mobile_audit.py
.agent/skills/nextjs-react-expert/scripts/: convert_rules.py
agent/: __init__.py  benchmark.py  curriculum.py  generate_sft_data.py  orchestrator.py  prompts.py  train_grpo.py  train_sft.py  validate_save.py
docs/: ARCHITECTURE.md  BENCHMARK.md
docs/runs/: benchmark_20260426_081523.html  benchmark_20260426_085129.html  benchmark_20260426_094901.html  benchmark_20260426_104859.html  benchmark_20260426_112649.html  benchmark_20260426_114359.html
incident_env/: __init__.py  client.py  models.py
incident_env/server/: analysis_page.py  app.py  demo_page.py  incident_environment.py  vector_env.py
incident_env/server/engine/: __init__.py  grader.py  infrastructure.py  log_generator.py  metrics_generator.py
incident_env/server/scenarios/: __init__.py  base.py  cert_expiry.py  db_failover.py  dns_propagation.py  easy.py  hard.py  k8s_eviction.py  medium.py  redis_memory_leak.py  regex_catastrophe.py  s3_keyspace.py
scripts/: backfill_snapshots.py  launch_benchmark.py  launch_grpo_only.py  launch_hf_job.py
server/: app.py
sft_data/: expert_trajectories.jsonl
tests/: test_debug_audit.py  test_e2e_reward.py  test_environment.py  test_inference.py  test_reward_functions.py
